--- a/main/src/main/res/layout/activity_register.xml
+++ b/main/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -34,7 +34,7 @@
                 android:textSize="18sp"
                 android:textColor="@drawable/move_on_bg"/>
 
-        </android.support.v7.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
 
         <TextView
