--- a/main/src/main/res/layout-v21/user_feed_item.xml
+++ b/main/src/main/res/layout-v21/user_feed_item.xml
@@ -164,7 +164,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_gravity="center_vertical"
@@ -197,7 +197,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_gravity="center_vertical"
