--- a/main/src/main/res/layout-v21/user_refeed_item.xml
+++ b/main/src/main/res/layout-v21/user_refeed_item.xml
@@ -184,7 +184,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="18dp"
                         android:layout_height="18dp"
                         android:layout_gravity="center_vertical"
@@ -217,7 +217,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="18dp"
                         android:layout_height="18dp"
                         android:layout_gravity="center_vertical"
