--- a/main/src/main/res/layout/hot_feed_item.xml
+++ b/main/src/main/res/layout/hot_feed_item.xml
@@ -84,7 +84,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp">
 
-                <android.support.v7.widget.AppCompatImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/likes"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
@@ -110,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
-                <android.support.v7.widget.AppCompatImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:layout_gravity="center_vertical"
