--- a/main/src/main/res/layout/user_feed_item.xml
+++ b/main/src/main/res/layout/user_feed_item.xml
@@ -133,7 +133,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/likes"
                         android:layout_width="18dp"
                         android:layout_height="18dp"
@@ -168,7 +168,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="18dp"
                         android:layout_height="18dp"
                         android:layout_gravity="center_vertical"
@@ -202,7 +202,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="18dp"
                         android:layout_height="18dp"
                         android:layout_gravity="center_vertical"
