--- a/main/src/main/res/layout/user_refeed_item.xml
+++ b/main/src/main/res/layout/user_refeed_item.xml
@@ -153,7 +153,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/likes"
                         android:layout_width="18dp"
                         android:layout_height="18dp"
@@ -189,7 +189,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="18dp"
                         android:layout_height="18dp"
                         android:layout_gravity="center_vertical"
@@ -223,7 +223,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center">
 
-                    <android.support.v7.widget.AppCompatImageView
+                    <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="18dp"
                         android:layout_height="18dp"
                         android:layout_gravity="center_vertical"
