--- a/main/src/main/res/layout/world_feed_item.xml
+++ b/main/src/main/res/layout/world_feed_item.xml
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
-                <android.support.v7.widget.AppCompatImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/likes"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
